--- a/dashboard.html
+++ b/dashboard.html
@@ -68,12 +68,37 @@
                     </div>
                     <br>
                     <div class="total">
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <br>
+                            <h4>Active Deposit</h4>
+                            
+                            <p>$100.00</p>
+                        </div>
+                        <div>
+                            <br>
+                            <h4>Total Deposit</h4>
+                            <p>$100.00</p>
+                        </div>
+                        <div>
+                            <br>
+                            <h4>Earning Total</h4>
+                            <p>$100.00</p>
+                        </div>
+                        <div>
+                            <br>
+                            <h4>Total Withdraw</h4>
+                            <p>$100.00</p>
+                        </div>
+                        <div>
+                            <br>
+                            <h4>Pending Withdraw</h4>
+                            <p>$100.00</p>
+                        </div>
+                        <div>
+                            <br>
+                            <h4>Last Withdraw</h4>
+                            <p>$100.00</p>
+                        </div>
                     </div>
                 </div>
             
