--- a/index.html
+++ b/index.html
@@ -44,14 +44,47 @@
          <a href="Sign_Up.html">Signup</a>
          <a href="help.html">Help</a>
          <a href="contact.html">Contact us</a>
-       </nav>
+    </nav>
 
     <div class="video-bg-container">
       <video autoplay loop muted playsinline>
           <source src="204306-923909642_small.mp4" type="video/mp4" />
           Your browser does not support the video tag.
       </video>
+
       <div class="overlay-content">
+
+        <div class="tradingview-widget-container">
+            <div class="tradingview-widget-container__widget"></div>
+            <script type="text/javascript" src="https://s3.tradingview.com/external-embedding/embed-widget-ticker-tape.js" async>
+            {
+                "symbols": [
+                    {
+                        "description": "",
+                        "proName": "BITSTAMP:BTCUSD"
+                    },
+                    {
+                        "description": "",
+                        "proName": "TRADENATION:TRONUSD"
+                    },
+                    {
+                        "description": "",
+                        "proName": "BINANCE:ETHUSDT"
+                    },
+                    {
+                        "description": "",
+                        "proName": "COINBASE:ETHUSD"
+                    }
+                ],
+                "showSymbolLogo": true,
+                "isTransparent": true,
+                "displayMode": "adaptive",
+                "colorTheme": "light",
+                "locale": "en"
+            }
+            </script>
+        </div>
+        
           <!-- Your content like text, buttons etc. -->
           <h1>Welcome To ApexaTrading</h1>
           <br>
@@ -63,7 +96,7 @@
           </div>
       </div>
     </div>
-
+   
     <!-- hero-section -->
     <div class="hero-section" id="hero">
         <div class="hero-content">
@@ -143,11 +176,8 @@
                 <h2>Charting Your Course 
                 <br>to Financial Freedom</h2>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                <br>elit. Porro, assumenda. Dolorem tenetur reprehenderit
-                <br> nobis facere necessitatibus. Quia porro animi earum
-                <br> rem perferendis est a quisquam. Expedita vitae quo 
-                <br>minima labore?
+                <p>Short selling a digital asset allows Miners to benefit from 
+                  <br>market movement by gaining more control over their profits
                 </p>
                 <br>
                 <img src="./avater1.png" alt="">
@@ -163,14 +193,16 @@
 
 
             <div class="chart_text">
-                <h2>Charting Your Course 
-                <br>to Financial Freedom</h2>
+                <h2>OUR Mission</h2>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                <br>elit. Porro, assumenda. Dolorem tenetur reprehenderit
-                <br> nobis facere necessitatibus. Quia porro animi earum
-                <br> rem perferendis est a quisquam. Expedita vitae quo 
-                <br>minima labore?
+                <p>Leading the quest to change the world as the trusted
+                <br> sustainability partner creating valued, single-sourced, 
+                <br>efficient energy solutions delivered with passion, 
+                <br>expertise, teamwork and a relentless focus on customer 
+                <br>satisfaction. All these and more we tend to achieve through
+                <br> a team of well dedicated personnel. At metro hedge, we Have
+                <br> the flexibility to remain ahead of a changing environment 
+                <br>by being entrepreneurial, passionate, open, innovative and smart.
                 </p>
                 <br>
                 <img src="./avater1.png" alt="">
@@ -186,14 +218,10 @@
 
 
             <div class="chart_text">
-                <h2>Charting Your Course 
-                <br>to Financial Freedom</h2>
+                <h2>Quick deposits, <br> quick withdrawals</h2>
                 <br>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing 
-                <br>elit. Porro, assumenda. Dolorem tenetur reprehenderit
-                <br> nobis facere necessitatibus. Quia porro animi earum
-                <br> rem perferendis est a quisquam. Expedita vitae quo 
-                <br>minima labore?
+                <p>Over 4 superb options for depositing and withdrawing money through 
+                <br>Bitcoin, Ethereum & USDT.
                 </p>
                 <br>
                 <img src="./avater1.png" alt="">
@@ -348,18 +376,18 @@
 
             <div>
               <br>
-              <h2>BROZEN PLANE</h2>
+              <h2>SILVER PLAN</h2>
               <br>
-              <h3>4.5% <span>Weekly Return On
+              <h3>5.5%<span>Weekly Return On
                 <br> Investment</span></h3>
               <br>
               <p>Minimum Deposit</p>
               <br>
-              <p>$150</p>
+              <p>$5,000</p>
               <br>
               <p>Maximum Deposit</p>
               <br>
-              <p>$5000</p>
+              <p>$19,999</p>
               <br>
               <p>REFERRAL 7%</p>
               <br>
@@ -376,18 +404,18 @@
 
             <div>
               <br>
-              <h2>BROZEN PLANE</h2>
+              <h2>DIAMOND PLANE</h2>
               <br>
-              <h3>4.5% <span>Weekly Return On
+              <h3>6.5% <span>Weekly Return On
                 <br> Investment</span></h3>
               <br>
               <p>Minimum Deposit</p>
               <br>
-              <p>$150</p>
+              <p>$20,000</p>
               <br>
               <p>Maximum Deposit</p>
               <br>
-              <p>$5000</p>
+              <p>$49,999</p>
               <br>
               <p>REFERRAL 7%</p>
               <br>
@@ -404,18 +432,18 @@
 
             <div>
               <br>
-              <h2>BROZEN PLANE</h2>
+              <h2>GOLD PLANE</h2>
               <br>
-              <h3>4.5% <span>Weekly Return On
+              <h3>7.5%<span>Weekly Return On
                 <br> Investment</span></h3>
               <br>
               <p>Minimum Deposit</p>
               <br>
-              <p>$150</p>
+              <p>$50,000</p>
               <br>
               <p>Maximum Deposit</p>
               <br>
-              <p>$5000</p>
+              <p>$99,999</p>
               <br>
               <p>REFERRAL 7%</p>
               <br>
@@ -444,11 +472,12 @@
                <h2>Bitcoin</h2>
                <br>
                <p>Lorem ipsum dolor sit amet, consectetur 
-                <br>adipisicing elit. Qui iure iste animi cumque
-                 inventore quia aliquam alias distinctio 
-                 deserunt architecto, id molestias voluptas 
-                 ex praesentium sapiente neque repellat possimus 
-                 libero!</p>
+                <br>adipisicing elit. Qui iure iste animi 
+                <br>cumqueinventore quia aliquam alias 
+                <br>distinctio deserunt architecto, id 
+                <br>molestias voluptas ex praesentium 
+                <br>sapiente neque repellat possimus 
+                 <br>libero!</p>
                 <br>
                <img src="./IMG_20240917_155500_542.jpg" alt="">
             </div>
@@ -458,11 +487,12 @@
                <h2>Ethereum</h2>
                <br>
                <p>Lorem ipsum dolor sit amet, consectetur 
-                <br>adipisicing elit. Qui iure iste animi cumque
-                 inventore quia aliquam alias distinctio 
-                 deserunt architecto, id molestias voluptas 
-                 ex praesentium sapiente neque repellat possimus 
-                 libero!</p>
+                <br>adipisicing elit. Qui iure iste animi 
+                <br>cumqueinventore quia aliquam alias 
+                <br>distinctio deserunt architecto, id 
+                <br>molestias voluptas ex praesentium 
+                <br>sapiente neque repellat possimus 
+                 <br>libero!</p>
                 <br>
                <img src="photo-1626162987518-4fee900a9323.avif" alt="">
             </div>
@@ -472,11 +502,12 @@
                <h2>Bitcoin</h2>
                <br>
                <p>Lorem ipsum dolor sit amet, consectetur 
-                <br>adipisicing elit. Qui iure iste animi cumque
-                 inventore quia aliquam alias distinctio 
-                 deserunt architecto, id molestias voluptas 
-                 ex praesentium sapiente neque repellat possimus 
-                 libero!</p>
+                <br>adipisicing elit. Qui iure iste animi 
+                <br>cumqueinventore quia aliquam alias 
+                <br>distinctio deserunt architecto, id 
+                <br>molestias voluptas ex praesentium 
+                <br>sapiente neque repellat possimus 
+                 <br>libero!</p>
                 <br>
                <img src="./IMG_20240917_155500_542.jpg" alt="">
             </div>
@@ -599,7 +630,7 @@
         </div>
   </div>
   
-     
+
 
    <script src="index.js"></script>
 </body>
