--- a/Sign_Out.html
+++ b/Sign_Out.html
@@ -38,7 +38,7 @@
          <a href="Sign_Up.html">Signup</a>
          <a href="help.html">Help</a>
          <a href="contact.html">Contact us</a>
-       </nav>
+  </nav>
      
      <div class="container">
         <h1 class="">Register With Us</h1>
@@ -72,7 +72,14 @@
             </div>
         </div>
     </div>
+    <!-- Set language to English (US) -->
+    <html lang="en-US">
 
+    <!-- Geolocation meta tag -->
+    <meta name="geo.region" content="US" />
+    <meta name="geo.placename" content="New York" />
+    <meta name="geo.position" content="40.7128;-74.0060" />
+    <meta name="ICBM" content="40.7128, -74.0060" />
       <!-- footer -->
   <div class="footer">
 
