--- a/about_us.html
+++ b/about_us.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="./about_us.css">
+    <link rel="stylesheet" href="./about_us.css"><link rel="stylesheet" href="index.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 </head>
@@ -53,7 +53,7 @@
 
 
 
-    
+    <div id="investmentBox"></div>
       <!-- our_mission -->
     <section>
         <div class="our_mission">
@@ -220,6 +220,8 @@
 
         </div>
   </div>
+  <script src="index.js"></script>
+  <link rel="stylesheet" href="index.css">
     <script src="about_us.js"></script>
 </body>
 </html>
