--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="contact.css"><link rel="stylesheet" href="index.css">
 </head>
 <body>
     
@@ -51,7 +51,7 @@
             <h1>Contact Us</h1>
         </div>
     </div>
-
+<div id="investmentBox"></div>
 
     <!-- our_mission -->
     <div class="our_mission">
@@ -187,6 +187,8 @@
 
         </div>
   </div>
+  <script src="index.js"></script>
+  <link rel="stylesheet" href="index.css">
     <script src="contact.js"></script>
 </body>
 </html>
