--- a/help.html
+++ b/help.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="help.css">
+    <link rel="stylesheet" href="help.css"><link rel="stylesheet" href="index.css">
 </head>
 <body>
 
@@ -56,7 +56,7 @@
         </div>
     </div>
 
-
+<div id="investmentBox"></div>
       <!-- Frequently -->
      <div class="Frequently">
         <h1>Frequently Asked Questions</h1>
@@ -237,7 +237,8 @@
 
         </div>
   </div>
-
+    <script src="index.js"></script>
+  
     <script src="help.js"></script>
     
 </body>
